--- a/params2.yaml
+++ b/params2.yaml
@@ -13,7 +13,7 @@ models:
   - model_type: random_forest
     hyperparameters:
       n_estimators: [115, 85]
-      max_depth: [8, 10]
+      max_depth: [3, 8]
       # min_samples_split: [2, 5]
 
   - model_type: svm
@@ -22,3 +22,12 @@ models:
       kernel: ['rbf', 'linear']
       # gamma: ['scale', 'auto']
 
+evaluation:
+  metrics:
+    - metric_type: accuracy
+      # type: accuracy
+    - metric_type: precision
+      # type: precision_weighted
+    - metric_type: recall
+      # type: recall_weighted
+  cv: [3,5]
